added notebook file on importing data with numpy

--- a/Generating data with numpy.ipynb
+++ b/Generating data with numpy.ipynb
@@ -62,46 +62,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.42237375e+214, 8.73774865e+183, 9.82723909e-153,\n",
-       "        4.86887888e+170, 9.08367217e+223, 5.50409697e+257,\n",
-       "        1.32851841e+179, 2.32160957e-152, 5.44367617e+156,\n",
-       "        6.01347002e-154],\n",
-       "       [3.17261480e+180, 6.01334434e-154, 9.87762528e+247,\n",
-       "        4.46811730e-091, 2.44041296e-154, 9.10016855e+276,\n",
-       "        1.03475054e-028, 1.17574872e+214, 9.19596581e+170,\n",
-       "        1.81450398e-152],\n",
-       "       [8.06827464e-090, 1.13088181e+257, 3.06836100e+257,\n",
-       "        6.01346953e-154, 1.87633123e-152, 3.32230853e+257,\n",
-       "        2.35288464e+251, 3.10423937e+169, 1.68821486e+195,\n",
-       "        6.01099969e+175],\n",
-       "       [1.94210174e+227, 2.68206260e-260, 7.70858946e+218,\n",
-       "        6.01334668e-154, 4.47593816e-091, 7.01413727e-009,\n",
-       "        3.74168445e+233, 2.59345444e+161, 2.58400946e+161,\n",
-       "        2.53160900e-086],\n",
-       "       [4.35287203e-114, 4.46009532e+217, 7.65775292e-096,\n",
-       "        1.15297918e-259, 1.12547821e-153, 6.01347002e-154,\n",
-       "        6.01347002e-154, 6.01347002e-154, 6.01347002e-154,\n",
-       "        6.01347002e-154],\n",
-       "       [6.01347002e-154, 6.98347712e-077, 5.98149210e-154,\n",
-       "        6.01354999e-154, 6.01347002e-154, 6.01347002e-154,\n",
-       "        6.01347002e-154, 6.01347002e-154, 6.01347002e-154,\n",
-       "        6.01347002e-154],\n",
-       "       [1.05132387e-153, 6.01334504e-154, 2.46770782e-154,\n",
-       "        3.55959779e+180, 1.03063392e-113, 1.99416198e+174,\n",
-       "        3.28897983e-086, 2.99936876e-067, 6.01334510e-154,\n",
-       "        6.01347002e-154],\n",
-       "       [4.04679947e-086, 1.15297735e-259, 6.01347002e-154,\n",
-       "        1.30459378e-076, 4.85110534e-086, 6.01334510e-154,\n",
-       "        7.80195971e-013, 8.03408340e-095, 1.05894728e-153,\n",
-       "        1.15301226e-259],\n",
-       "       [6.01347002e-154, 5.36812248e+242, 9.92152605e+247,\n",
-       "        5.56206154e+180, 6.01347002e-154, 8.94213159e+130,\n",
-       "        6.03134498e-154, 3.88834045e+160, 2.44011733e-154,\n",
-       "        1.71010319e+214],\n",
-       "       [6.09892510e-013, 2.43896055e-154, 2.93573416e+222,\n",
-       "        3.17250583e+180, 8.47907613e-053, 3.85589709e-086,\n",
-       "        5.98147416e-154, 4.23820020e+175, 9.94858344e-260,\n",
-       "        1.41473196e+161]])"
+       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
      "execution_count": 3,
@@ -177,46 +147,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.42237375e+214, 8.73774865e+183, 9.82723909e-153,\n",
-       "        4.86887888e+170, 9.08367217e+223, 5.50409697e+257,\n",
-       "        1.32851841e+179, 2.32160957e-152, 5.44367617e+156,\n",
-       "        6.01347002e-154],\n",
-       "       [3.17261480e+180, 6.01334434e-154, 9.87762528e+247,\n",
-       "        4.46811730e-091, 2.44041296e-154, 9.10016855e+276,\n",
-       "        1.03475054e-028, 1.17574872e+214, 9.19596581e+170,\n",
-       "        1.81450398e-152],\n",
-       "       [8.06827464e-090, 1.13088181e+257, 3.06836100e+257,\n",
-       "        6.01346953e-154, 1.87633123e-152, 3.32230853e+257,\n",
-       "        2.35288464e+251, 3.10423937e+169, 1.68821486e+195,\n",
-       "        6.01099969e+175],\n",
-       "       [1.94210174e+227, 2.68206260e-260, 7.70858946e+218,\n",
-       "        6.01334668e-154, 4.47593816e-091, 7.01413727e-009,\n",
-       "        3.74168445e+233, 2.59345444e+161, 2.58400946e+161,\n",
-       "        2.53160900e-086],\n",
-       "       [4.35287203e-114, 4.46009532e+217, 7.65775292e-096,\n",
-       "        1.15297918e-259, 1.12547821e-153, 6.01347002e-154,\n",
-       "        6.01347002e-154, 6.01347002e-154, 6.01347002e-154,\n",
-       "        6.01347002e-154],\n",
-       "       [6.01347002e-154, 6.98347712e-077, 5.98149210e-154,\n",
-       "        6.01354999e-154, 6.01347002e-154, 6.01347002e-154,\n",
-       "        6.01347002e-154, 6.01347002e-154, 6.01347002e-154,\n",
-       "        6.01347002e-154],\n",
-       "       [1.05132387e-153, 6.01334504e-154, 2.46770782e-154,\n",
-       "        3.55959779e+180, 1.03063392e-113, 1.99416198e+174,\n",
-       "        3.28897983e-086, 2.99936876e-067, 6.01334510e-154,\n",
-       "        6.01347002e-154],\n",
-       "       [4.04679947e-086, 1.15297735e-259, 6.01347002e-154,\n",
-       "        1.30459378e-076, 4.85110534e-086, 6.01334510e-154,\n",
-       "        7.80195971e-013, 8.03408340e-095, 1.05894728e-153,\n",
-       "        1.15301226e-259],\n",
-       "       [6.01347002e-154, 5.36812248e+242, 9.92152605e+247,\n",
-       "        5.56206154e+180, 6.01347002e-154, 8.94213159e+130,\n",
-       "        6.03134498e-154, 3.88834045e+160, 2.44011733e-154,\n",
-       "        1.71010319e+214],\n",
-       "       [6.09892510e-013, 2.43896055e-154, 2.93573416e+222,\n",
-       "        3.17250583e+180, 8.47907613e-053, 3.85589709e-086,\n",
-       "        5.98147416e-154, 4.23820020e+175, 9.94858344e-260,\n",
-       "        1.41473196e+161]])"
+       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
       ]
      },
      "execution_count": 6,
@@ -363,9 +303,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[   0,    0,    0,    0,    0],\n",
-       "       [   0,    0,    0,    0,    0],\n",
-       "       [1440,    0,    0,    0,    0]])"
+       "array([[      0,       0,       0,       0,       0],\n",
+       "       [      0,       0,       0,       0,       0],\n",
+       "       [   1460,       0,       0, 3342433,       0]])"
       ]
      },
      "execution_count": 11,
@@ -538,7 +478,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.40363671, -0.52305138,  0.54546222,  0.7980638 ,  0.08969348])"
+       "array([ 0.2941317 , -1.92620541, -0.10522741, -0.67202442,  0.2714956 ])"
       ]
      },
      "execution_count": 15,
@@ -560,11 +500,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.85032151,  2.38326688,  1.54955448,  0.61734068, -1.49464802],\n",
-       "       [-0.23908075,  1.60682305, -1.36891535, -0.687979  , -0.28674652],\n",
-       "       [ 0.53390001,  0.68838262, -0.78252273,  1.62011725,  0.17897661],\n",
-       "       [ 1.01587515,  0.9525451 , -1.71798305, -1.35085723,  2.08903407],\n",
-       "       [-0.45655284, -0.01125838, -0.56527673, -0.50462143, -1.07322463]])"
+       "array([[-0.28931253, -2.11432987,  0.39408794,  1.59862273,  2.69544128],\n",
+       "       [ 1.21935062,  0.25718062, -2.11078916,  1.22369193, -0.53241185],\n",
+       "       [ 0.62011908, -0.17501558, -0.5121085 , -0.88066126,  0.48418204],\n",
+       "       [-0.53749787, -0.76974738, -0.06855381,  0.15760018, -1.49484059],\n",
+       "       [-0.27757248,  0.15377214,  1.099585  , -0.0982521 ,  0.16856834]])"
       ]
      },
      "execution_count": 16,
@@ -623,12 +563,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[18, 78, 64, 78, 84],\n",
+       "       [66, 67, 28, 10, 69],\n",
+       "       [45, 15, 37, 74, 96],\n",
+       "       [19, 21, 89, 73, 54],\n",
+       "       [53, 84, 66, 51, 92]], dtype=int64)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "array_RG=gen(pcg(seed=365))\n",
-    "array_RG.integers(10,)"
+    "array_RG.integers(low=10,high=100,size=(5,5))"
    ]
   },
   {
@@ -695,6 +650,104 @@
    "source": [
     "### Applications of Random Generators"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
