--- a/Notebooks and Data/Importing text data.ipynb
+++ b/Notebooks and Data/Importing text data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,37 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 2000.,    40.,   365.,  3121.,  4241., 13621.],\n",
-       "       [ 2000.,    40.,   365.,  3061.,  4171., 15041.],\n",
-       "       [ 1000.,    40.,   365.,  2160.,  3280., 15340.],\n",
-       "       ...,\n",
-       "       [ 2000.,    40.,   365.,  4201.,  5001., 16600.],\n",
-       "       [ 1000.,    40.,   365.,  2080.,  3320., 15600.],\n",
-       "       [ 2000.,    40.,   365.,  4601.,  4601., 16600.]])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lendingCoDataNumeric=np.loadtxt(\"LendingCompanyNumericData.csv\",delimiter=',')\n",
-    "lendingCoDataNumeric\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -75,13 +48,40 @@
     }
    ],
    "source": [
+    "lendingCoDataNumeric=np.loadtxt(\"LendingCompanyNumericData.csv\",delimiter=',')\n",
+    "lendingCoDataNumeric\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2000.,    40.,   365.,  3121.,  4241., 13621.],\n",
+       "       [ 2000.,    40.,   365.,  3061.,  4171., 15041.],\n",
+       "       [ 1000.,    40.,   365.,  2160.,  3280., 15340.],\n",
+       "       ...,\n",
+       "       [ 2000.,    40.,   365.,  4201.,  5001., 16600.],\n",
+       "       [ 1000.,    40.,   365.,  2080.,  3320., 15600.],\n",
+       "       [ 2000.,    40.,   365.,  4601.,  4601., 16600.]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "lendingCoDataNumeric1=np.genfromtxt(\"LendingCompanyNumericData.csv\",delimiter=',')\n",
     "lendingCoDataNumeric1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -92,7 +92,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "       [ 2000.,    40.,   365.,  4601.,  4601., 16600.]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -154,7 +154,7 @@
        "       ['2000', '40', '365', '4601', '4601', '16600']], dtype='<U5')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "       [ 2000.,    40.,   365.,  4601.,  4601., 16600.]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "       [ 2000.,    40.,   365.,  4601.,  4601., 16600.]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,25 +248,181 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "What if we want to remove columns and not rows? what do we do? let's do this"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2000.,    40., 13621.],\n",
+       "       [ 2000.,    40., 15041.],\n",
+       "       [ 1000.,    40., 15340.],\n",
+       "       ...,\n",
+       "       [   nan,    40., 16600.],\n",
+       "       [ 1000.,    40., 15600.],\n",
+       "       [ 2000.,    40., 16600.]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lendingCoDataNumericNAN=np.genfromtxt(\"LendingCoNumericDataWithNAN.csv\",\n",
+    "                                      delimiter=';',\n",
+    "                                      usecols=(0,1,5))\n",
+    "lendingCoDataNumericNAN\n",
+    "#the above code lets us use only the first, second and the sixt columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One interesting thing is that, we can use only the columns we want and also arrange them in the order that we want. Lets do this"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[13621.,    40.,  2000.],\n",
+       "       [15041.,    40.,  2000.],\n",
+       "       [15340.,    40.,  1000.],\n",
+       "       ...,\n",
+       "       [16600.,    40.,    nan],\n",
+       "       [15600.,    40.,  1000.],\n",
+       "       [16600.,    40.,  2000.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lendingCoDataNumericNAN=np.genfromtxt(\"LendingCoNumericDataWithNAN.csv\",\n",
+    "                                      delimiter=';',\n",
+    "                                      usecols=(5,1,0))\n",
+    "lendingCoDataNumericNAN\n",
+    "#the above code rearranges our columns as we instructed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[15340.,    40.,  1000.],\n",
+       "       [15321.,    40.,  2000.],\n",
+       "       [13720.,    50.,  2000.],\n",
+       "       ...,\n",
+       "       [16600.,    40.,  2000.],\n",
+       "       [16600.,    40.,  2000.],\n",
+       "       [16600.,    40.,    nan]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lendingCoDataNumericNAN=np.genfromtxt(\"LendingCoNumericDataWithNAN.csv\",\n",
+    "                                      delimiter=';',\n",
+    "                                      skip_header=2,\n",
+    "                                      skip_footer=2,\n",
+    "                                      usecols=(5,1,0))\n",
+    "lendingCoDataNumericNAN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can set each of these columns to some variables. This is how we do that.Check the code below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6504/2026378774.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m rowOne,rowTwo,rowThree=np.genfromtxt(\"LendingCoNumericDataWithNAN.csv\",\n\u001b[0m\u001b[0;32m      2\u001b[0m                                       \u001b[0mdelimiter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m';'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m                                       \u001b[0mskip_header\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m                                       \u001b[0mskip_footer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m                                       usecols=(5,1,0))\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 3)"
+     ]
+    }
+   ],
+   "source": [
+    "rowOne,rowTwo,rowThree=np.genfromtxt(\"LendingCoNumericDataWithNAN.csv\",\n",
+    "                                      delimiter=';',\n",
+    "                                      skip_header=2,\n",
+    "                                      skip_footer=2,\n",
+    "                                      usecols=(5,1,0))\n",
+    "lendingCoDataNumericNAN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Oh! Too many values to upack? alright, we can  do this. Check the code below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[15340.,    40.,  1000.],\n",
+       "       [15321.,    40.,  2000.],\n",
+       "       [13720.,    50.,  2000.],\n",
+       "       ...,\n",
+       "       [16600.,    40.,  2000.],\n",
+       "       [16600.,    40.,  2000.],\n",
+       "       [16600.,    40.,    nan]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rowOne,rowTwo,rowThree=np.genfromtxt(\"LendingCoNumericDataWithNAN.csv\",\n",
+    "                                      delimiter=';',\n",
+    "                                      skip_header=2,\n",
+    "                                      skip_footer=2,\n",
+    "                                      usecols=(5,1,0),\n",
+    "                                    unpack=True)\n",
+    "lendingCoDataNumericNAN"
+   ]
   },
   {
    "cell_type": "markdown",
