added a new file for codes on saving data with numpy

--- a/Notebooks and Data/Importing text data.ipynb
+++ b/Notebooks and Data/Importing text data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
        "       [ 2000.,    40.,   365.,  4601.,  4601., 16600.]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "       [ 2000.,    40.,   365.,  4601.,  4601., 16600.]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -92,7 +92,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "       [ 2000.,    40.,   365.,  4601.,  4601., 16600.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
@@ -154,7 +154,7 @@
        "       ['2000', '40', '365', '4601', '4601', '16600']], dtype='<U5')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "       [ 2000.,    40.,   365.,  4601.,  4601., 16600.]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
        "       [ 2000.,    40.,   365.,  4601.,  4601., 16600.]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
        "       [ 2000.,    40., 16600.]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "       [16600.,    40.,  2000.]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "       [16600.,    40.,    nan]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "       [16600.,    40.,    nan]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,12 +425,125 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([15340., 15321., 13720., ..., 16600., 16600., 16600.])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rowOne"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1000., 2000., 2000., ..., 2000., 2000.,   nan])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rowThree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "scrolled": true
    },
    "source": [
     "### String vs Object vs Numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[      nan,       nan,       nan, ...,       nan,       nan,\n",
+       "              nan],\n",
+       "       [1.000e+00,       nan,       nan, ...,       nan,       nan,\n",
+       "        1.660e+04],\n",
+       "       [2.000e+00,       nan,       nan, ...,       nan,       nan,\n",
+       "        1.660e+04],\n",
+       "       ...,\n",
+       "       [1.041e+03,       nan,       nan, ...,       nan,       nan,\n",
+       "        1.660e+04],\n",
+       "       [1.042e+03,       nan,       nan, ...,       nan,       nan,\n",
+       "        1.560e+04],\n",
+       "       [1.043e+03,       nan,       nan, ...,       nan,       nan,\n",
+       "        1.660e+04]])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lendingCoLT=np.genfromtxt('lendingCoLT.csv',delimiter=',')\n",
+    "lendingCoLT\n",
+    "#we first have to open the file outside this program to see the delimiter whether a colon or a comma"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To get a neater output, we can print the variable. Let's do this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[      nan       nan       nan ...       nan       nan       nan]\n",
+      " [1.000e+00       nan       nan ...       nan       nan 1.660e+04]\n",
+      " [2.000e+00       nan       nan ...       nan       nan 1.660e+04]\n",
+      " ...\n",
+      " [1.041e+03       nan       nan ...       nan       nan 1.660e+04]\n",
+      " [1.042e+03       nan       nan ...       nan       nan 1.560e+04]\n",
+      " [1.043e+03       nan       nan ...       nan       nan 1.660e+04]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lendingCoLT=np.genfromtxt('lendingCoLT.csv',delimiter=',')\n",
+    "print(lendingCoLT)\n",
+    "#it looks more organized to print out our values than to just call them directly"
    ]
   },
   {
