added some explanation to the np.savetxt

--- a/Notebooks and Data/Saving Data With Numpy.ipynb
+++ b/Notebooks and Data/Saving Data With Numpy.ipynb
@@ -177,7 +177,9 @@
     "lendingCo=np.genfromtxt(\"LendingCompanySaving.csv\",\n",
     "                                  delimiter=',',\n",
     "                                  dtype=str)\n",
-    "print(lendingCo)"
+    "print(lendingCo)\n",
+    "#what happend here was that we first load our csv file onto numpy and save it to some variable\n",
+    "#we name our variable lendingCo"
    ]
   },
   {
@@ -190,7 +192,8 @@
     "           lendingCo,\n",
     "           fmt='%s',\n",
     "           delimiter=','\n",
-    "          )"
+    "          )\n",
+    "#"
    ]
   },
   {
