added some more operations on saving files as csv

--- a/Notebooks and Data/Saving Data With Numpy.ipynb
+++ b/Notebooks and Data/Saving Data With Numpy.ipynb
@@ -193,7 +193,9 @@
     "           fmt='%s',\n",
     "           delimiter=','\n",
     "          )\n",
-    "#"
+    "#now we are converting our loaded csv file to txt file\n",
+    "#we just call np.savetxt,enter the name and extension of our new file and then call \n",
+    "#the variable onto which we saved our csv file"
    ]
   },
   {
